tests/array_literals_mut_pointer_bad.stderr
tests/array_literals_mut_pointer_bad.hop:3:17: error: HOP2115: array literal cannot bind to mutable reference or pointer storage
