tests/array_literals_mut_pointer_bad.hop
// Verifies bare array literals do not allocate mutable pointer storage.
fn main() {
	var a *[int] = [1, 2]
	_ = a
}
